[project]
name = "kasparro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-ollama>=1.0.1",
    "langchain[anthropic]>=1.2.0",
    "langgraph>=1.0.5",
    "langgraph-cli[inmem]>=0.4.11",
    "ollama>=0.6.1",
]
